k8s-security/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ing
spec:
  rules:
    - host: "learnwithusama.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: caddy-svc
                port:
                  number: 80
